previous/test/configmap-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-opt
  namespace: test
spec:
  containers:
    - name: nginx-opt
      image: nginx
      #  command: [ "/bin/sh", "-c", "env" ]
      env:
        # Define the environment variable
        - name: OPTIONS
          valueFrom:
            configMapKeyRef:
              # The ConfigMap containing the value you want to assign to SPECIAL_LEVEL_KEY
              name: myconfigmap
              # Specify the key associated with the value
              key: key5
  restartPolicy: Never
