previous/test/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  creationTimestamp: null
  labels:
    app: elastic-search
  name: elastic-search
  namespace: test
spec:
  selector:
    matchLabels:
      app: elastic-search
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: elastic-search
    spec:
      containers:
      - image: k8s.gcr.io/fluentd-elasticsearch:1.20
        name: fluentd-elasticsearch
        resources: {}
