previous/test/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-lolicy
  namespace: test
spec:
  podSelector:
    matchLabels:
      app: nginx-last
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: granted
