previous/test/nginx-another.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-opt
  name: nginx-envfrom
  namespace: test
spec:
  containers:
  - image: nginx
    name: nginx-opt
    envFrom:
      - configMapRef:
          name: myconfig
