previous/test/nginx-cm.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-cm
  name: nginx-cm
  namespace: test
spec:
  containers:
  - image: nginx
    name: nginx-cm
    volumeMounts:
      - name: config-volume
        mountPath: /etc/spartaa
  volumes:
    - name: config-volume
      configMap:
        # Provide the name of the ConfigMap containing the files you want
        # to add to the container
        name: cmvolume
