previous/test/nginx-opt.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-opt
  name: nginx-opt
  namespace: test
spec:
  containers:
  - image: nginx
    name: nginx-opt
    env:
        - name: OPTIONS
          valueFrom:
            configMapKeyRef:
              name: myconfig
              key: key1
