previous/test/nginx-toleration.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-toleration
  name: nginx-toleration
  namespace: test
spec:
  containers:
  - image: nginx
    name: nginx-toleration
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  tolerations:
  - key: "spray"
    value: "mortein"
    effect: "NoSchedule"
status: {}
