previous/test/nginx-vol.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-opt
  name: nginx-vol
  namespace: test
spec:
  containers:
  - image: nginx
    name: nginx-opt
    #    command: [ "/bin/sh", "-c", "ls /etc/test/" ]
    volumeMounts:
      - name: config-volume
        mountPath: /etc/test
  volumes:
    - name: config-volume
      configMap:
        name: myconfig
