previous/test/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox-user
  name: busybox-user
  namespace: practice
spec:
  containers:
  - command:
    - sleep
    - "3600"
    image: busybox
    name: busybox-user
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
