previous/test/readiness-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-ready
  name: nginx-ready
  namespace: test
spec:
  containers:
  - image: nginx
    name: nginx-ready
    ports:
    - containerPort: 80
    readinessProbe:
      httpGet:
       path: /    
       port: 80
      failureThreshold: 1
